# ctadl-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  README_EVALUATION.md  flake.nix
.github/workflows/: test.yml
benchmarks/: firmware_model.json  juliet_model.json
ctadl-ascent/: Cargo.toml
ctadl-ascent/examples/: ir1.rs
ctadl-ascent/src/: devguide.rs  error.rs  facts.rs  lib.rs  main.rs  project.rs  stats.rs
ctadl-ascent/src/cli/: mod.rs
ctadl-ascent/src/codegen/: flowy.rs  mod.rs  models.rs  tests.rs
ctadl-ascent/src/facts/: parquet.rs  schema.rs
ctadl-ascent/src/index_engine/: graphviz.rs  mod.rs  source_info.rs
ctadl-ascent/src/languages/: mod.rs
ctadl-ascent/src/languages/dex/: mod.rs  tests.rs
ctadl-ascent/src/languages/jadx/: default-index.jsonl
ctadl-ascent/src/languages/jvm/: mod.rs
ctadl-ascent/src/languages/pcode/: default-index.jsonl  ghidra.rs  mod.rs
ctadl-ascent/src/languages/tree_sitter/: experimental_tests.rs  mod.rs  tests.rs
ctadl-ascent/src/models/: codegen.rs  ctadl-model-generator.schema.json  json.rs  mod.rs  tests.rs  universe_set.rs
ctadl-ascent/src/query_engine/: formatter.rs  graphviz.rs  mod.rs
ctadl-ascent/tests/: cli.rs  flowy_tests.rs  json_error_handling.rs  models_loading.rs
ctadl-ascent/tests/c/: example.c  example1.c  example2.c  xfer.c  xfer.json
ctadl-ascent/tests/tnt/: README.md  alias1.tnt  alias2.tnt  alias3.tnt  basic1.tnt  basic2.tnt  basic3.tnt  basic4.tnt  basic5.tnt  complex_summary_test.tnt  comprehensive_numeric_test.tnt  edge_cases_test.tnt  ex3.tnt  ex4.tnt  funcptr1.tnt  funcptr_undefined.tnt  globals1.tnt  hybrid_inlining.tnt  numeric_transfer.tnt  poly.tnt  recursion.tnt  summary_numeric_test.tnt  syntax_test.tnt  taint1.tnt  taint2.tnt  taint3.tnt  taint4.tnt
ctadl-ascent/tests/tnt-aspirational/: alias4.tnt  alias5.tnt
ctadl-flowy/: Cargo.toml
ctadl-flowy/src/: flowy.pest  lib.rs  main.rs  parse.rs
ctadl-ir/: Cargo.toml  README.md
ctadl-ir/src/: lib.rs
ctadl-ir/src/graph/: mod.rs  reference.rs  reversed.rs  tests.rs
ctadl-ir/src/graph/dominators/: mod.rs  tests.rs
ctadl-ir/src/graph/scc/: mod.rs  tests.rs
ctadl-ir/src/graph/sort/: mod.rs  tests.rs
ctadl-ir/src/index/: idx.rs  index_vec.rs  index_vec_deque.rs  mod.rs  slice.rs
ctadl-ir/src/mir/: basic_blocks.rs  builder.rs  builder_tests.rs  call.rs  encode.rs  mem_lower.rs  mod.rs  pos.rs  terminator.rs  tests.rs  verify.rs
ctadl-ir/src/mir/visit/: mod.rs
ctadl-ir/src/ssa/: mod.rs  tests.rs
dex-reader/: Cargo.toml  todos.txt
dex-reader/scripts/: formats.txt  gen_decoder.py  opcodes.txt
dex-reader/src/: apk.rs  basic_blocks.rs  debug_info.rs  error.rs  instructions.rs  lib.rs  main.rs  parse_utils.rs  parser.rs  smali.rs  types.rs
dex-reader/tests/: integration_test.rs
docs/: debugging.md  pcode_schema.sql
examples/: offset_example.rs
jvm-reader/: Cargo.toml  LICENSE  README.md  linemap-format.md
jvm-reader/src/: error.rs  flow.rs  instructions.rs  jar.rs  lib.rs  linemap.rs  main.rs  parse_utils.rs  parser.rs  types.rs
jvm-reader/tests/: test_disas.rs
jvm-reader/tests/sample/: HelloWorld.java  README.md
nix/sarif-multitool/: checksarif.nix  default.nix  sarif-validation.xml
pcode-reader/: Cargo.toml  ExportPcode.java
pcode-reader/src/: constant_propagation.rs  error.rs  lib.rs
rustc_graphviz/src/: lib.rs  tests.rs
sarif-util/: Cargo.toml
scripts/: evaluate_benchmarks.py  setup_karonte_dataset.py
source-info/: Cargo.toml  README.md
source-info/examples/: large.rs  parquet_out.rs  parquet_query.rs  sarif_export.rs
source-info/src/: artifact.rs  artifact_cache.rs  builder.rs  db.rs  error.rs  file_span_table.rs  file_table.rs  ids.rs  lib.rs  line_map.rs  offset_to_line.rs  parquet_io.rs  sarif.rs  source_info.rs  span.rs  span_table.rs  store.rs  validation.rs
source-info/src/serialize/: artifact.rs  file.rs  file_span.rs  leb128.rs  mod.rs
