[package]
name = "pcode-reader"
edition = "2024"
version.workspace = true

[dependencies]
ascent = "0.8.0"
ascent_base = "0.8.0"
csv = "1.3"
hashbrown = "0.16"
internment = { version = "0.8", features = ["arc", "serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1"
thiserror = "2"

[lints]
workspace = true
