[package]
name = "sarif-util"
edition = "2024"
version.workspace = true

[[bin]]
name = "show-regions"
path = "src/bin/show_regions.rs"

[dependencies]
clap   = { version = "4.5", features = ["derive"] }
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
url = "2.5"

[lints]
workspace = true
