[package]
name = "source-info"
version = "0.1.0"
edition = "2024"

[dependencies]
sled  = { version = "0.34", optional = true }
serde = { version = "1",    optional = true, features = ["derive"] }
parquet = "58"
arrow = "58"

[dev-dependencies]
tempfile   = "3"
datafusion = "53"
tokio      = { version = "1", features = ["rt-multi-thread", "macros"] }
serde-sarif = "0.8"
serde_json  = "1"
serde       = { version = "1", features = ["derive"] }

[features]
sled  = ["dep:sled"]
serde = ["dep:serde"]

[[example]]
name = "large"
required-features = ["sled"]

[[example]]
name = "parquet_out"

[[example]]
name = "parquet_query"

[[example]]
name = "sarif_export"
